Improved look and feel, station edit page

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,4 +13,4 @@ spring:
 
 logging.level:
   se.uppsalamakerspace.iot: DEBUG
-  #org.springframework.security: DEBUG
+  org.springframework.security: DEBUG
